--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,15 @@
 </head>
 <body>
     <header>
-        <h1>DesligaTempo</h1>
+        <h1>DesligaTempo ⏲</h1>
     </header>
     <main id="online" class="hidden">
+        <div id="acao">
+            <select id="acao-selector">
+                <option value="sleep">Suspender</option>
+                <option value="shutdown" selected>Desligar</option>
+            </select>
+        </div>
         <div class="relogio">
             <h2>
                 <span id="hr">00</span>
